added about us page and worked on styling

--- a/about_us.html
+++ b/about_us.html
@@ -7,15 +7,35 @@
 <body>
     <nav>
         <h1 id="websiteName">TravelAide</h1>
-        <div id=navigationBarDiv>
+        <div id=navigationLinks>
         <a href="./home.html" id="home">Home</a>
         <a href="./about_us.html" id="aboutUs">About Us</a>
         <a href="./contact_us.html" id="contactUs">Contact Us</a>
-        <div>
+        <div id="placeholderDiv"></div>
     </nav>
     <div id="pageBody">
-        <div id="webpageSlogan">EXPLORE THE WORLD</div>
-        <div id="webpageIntro">At TravelAide, we believe that every journey is a new adventure waiting to be discovered. Whether you're planning a relaxing beach getaway, an exhilarating mountain trek, or a cultural city tour, we're here to turn your travel dreams into reality.</div>
+        <h1 id="aboutUsTitle">ABOUT US</h1>
+        <div id="companyInfo">Welcome to TravelAide! We are your trusted partners in crafting unforgettable journeys. Our dedicated team of travel experts is committed to turning your travel aspirations into reality. Whether you're seeking to bask in the sun on a serene beach, conquer rugged mountain trails, or immerse yourself in vibrant cultural experiences, we provide personalized recommendations and comprehensive support to ensure every moment of your trip is perfect. At TravelAide, we believe that every traveler deserves a unique, enriching adventure. Let us guide you to explore the world with ease and excitement. </div>
+        <div id="teamMembers">
+            <div id="teamMembersTitle">Team Members</div>
+            <ul id=teamMembersList>
+                <li id="teamMember">
+                    <h6 id="teamMemberName">Jacob Kim</h6>
+                    <div id="responsibilities">Leading the company's vision and strategy, and making high-level executive decisions.</div>
+                    <div id="role">CEO</div>
+                </li>
+                <li id="teamMember">
+                    <h6 id="teamMemberName">John Doe</h6>
+                    <div id="responsibilities">Overseeing day-to-day operations and ensuring smooth departmental coordination.</div>
+                    <div id="role">COO</div>
+                </li>
+                <li id="teamMember">
+                    <h6 id="teamMemberName">Jane Doe</h6>
+                    <div id="responsibilities">Leading the marketing team and executing marketing strategies to drive business growth.</div>
+                    <div id="role">CMO</div>
+                </li>
+            </ul>
+        </div>
     <div>
 </body>
 </html>
