--- a/about_us.html
+++ b/about_us.html
@@ -17,8 +17,8 @@
         <h1 id="aboutUsTitle">ABOUT US</h1>
         <div id="companyInfo">Welcome to TravelAide! We are your trusted partners in crafting unforgettable journeys. Our dedicated team of travel experts is committed to turning your travel aspirations into reality. Whether you're seeking to bask in the sun on a serene beach, conquer rugged mountain trails, or immerse yourself in vibrant cultural experiences, we provide personalized recommendations and comprehensive support to ensure every moment of your trip is perfect. At TravelAide, we believe that every traveler deserves a unique, enriching adventure. Let us guide you to explore the world with ease and excitement. </div>
         <div id="teamMembers">
-            <div id="teamMembersTitle">Team Members</div>
-            <ul id=teamMembersList>
+            <div id="teamMembersTitle">Our Team</div>
+            <ul id="teamMembersList">
                 <li id="teamMember">
                     <h6 id="teamMemberName">Jacob Kim</h6>
                     <div id="responsibilities">Leading the company's vision and strategy, and making high-level executive decisions.</div>
