added search bar functionality and contact us page

--- a/home.html
+++ b/home.html
@@ -21,6 +21,8 @@
     <div id="pageBody">
         <div id="webpageSlogan">EXPLORE THE WORLD</div>
         <div id="webpageIntro">At TravelAide, we believe that every journey is a new adventure waiting to be discovered. Whether you're planning a relaxing beach getaway, an exhilarating mountain trek, or a cultural city tour, we're here to turn your travel dreams into reality.</div>
-    <div>
+        <div id="resultsDiv"></div>
+    </div>
+    <script src="./travel_recommendation.js"></script>
 </body>
 </html>
